# STZ_lab5

./: CMakeLists.txt  Cube.cpp  Cube.h  README.md  main.cpp
python/: calibrate.py  detect.py
